Add ISQ FP8 (#832)
* Add cublaslt matmul

* cuBLASlt matmul roughly works

* Add layer

* Tests pass

* Add isq fp8 layer forward

* Better tests

* It works

* Clippy and fix dequant matmul

* Add UQFF support

* Update docs

* All tests pass

* Improved quantization

--- a/mistralrs-quant/Cargo.toml
+++ b/mistralrs-quant/Cargo.toml
@@ -21,6 +21,8 @@ paste = "1.0.15"
 tracing.workspace = true
 rayon.workspace = true
 byteorder = "1.5.0"
+float8.workspace = true
+once_cell.workspace = true
 
 [features]
 cuda = ["candle-core/cuda", "candle-nn/cuda", "dep:bindgen_cuda"]
