--- a/mistralrs-paged-attn/Cargo.toml
+++ b/mistralrs-paged-attn/Cargo.toml
@@ -14,6 +14,7 @@ homepage.workspace = true
 [dependencies]
 candle-core.workspace = true
 half.workspace = true
+float8.workspace = true
 
 [build-dependencies]
 bindgen_cuda = {git = "https://github.com/guoqingbao/bindgen_cuda.git", version = "0.1.6"}
