Add GPTQ Marlin support for 4 and 8 bit (#856)
* Add GPTQ Marlin support for 4 and 8 bit

* GPTQ marlin backend is working

* Typo

* Update docs

--- a/.typos.toml
+++ b/.typos.toml
@@ -4,7 +4,8 @@ extend-ignore-identifiers-re = [
     "mmaped",
     "arange",
     "Nd",
-    "nin"
+    "nin",
+    "cudaDevAttrMaxSharedMemoryPerBlockOptin"
 ]
 
 [files]
