Add a faster and nicer fix

--- a/mistralrs/Cargo.toml
+++ b/mistralrs/Cargo.toml
@@ -132,3 +132,7 @@ required-features = []
 [[example]]
 name = "llama_vision"
 required-features = []
+
+[[example]]
+name = "llama_vision_multiturn"
+required-features = []
